--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.password= baha007
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.open-in-view=false
+spring.hateoas.use-hal-as-default-json-media-type=false
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
