--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 spring.hateoas.use-hal-as-default-json-media-type=false
-
+spring.devtools.restart.enabled:  false
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
 
