--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jackson.time-zone= UTC
 
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 20000
+app.jwtExpirationInMs = 88888888
 
 ## Spring Profiles
 # spring.profiles.active=prod
