--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.datasource.url= jdbc:mysql://localhost:3306/fstgate?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= baha007
+allowPublicKeyRetrieval=true
 
 
 ## Hibernate Properties
